# DistributedMatrixLibrary

./: .clang-format  CMakeLists.txt  README.md  build.cmake  main.c  main.cpp  manager.cpp  numbers_test.c  run_benchmark.cmake  run_tests.cmake  sequential_solver.c  thought process  worker.cpp
benchmarks/: addition_benchmark.cpp
distributed_implementations/: DistributedMultiplication.cpp
distributed_memory/: main.c
distributed_workers/: distributed_addition_worker.cpp  distributed_multiplication_worker.cpp  distributed_subtraction_worker.cpp
include/: Calculator.h  CalculatorFactory.h  DistributedMultiplication.h  IAddition.h  IMatrixMultiplication.h  IMultiplication.h  ISubtraction.h  Matrix.hpp  MatrixMultiplication.h  NaiveAddition.h  NaiveMatrixMultiplication.h  NaiveMultiplication.h  NaiveSubtraction.h  WorkerNames.h  distributed_addition.h  distributed_addition.hpp  distributed_multiplication.hpp  distributed_subtraction.h  distributed_subtraction.hpp  matrix.hpp  mpi_type_templates.h  mpi_type_templates.hpp  naive_addition.hpp  naive_matrix_multiplication.hpp  naive_multiplication.hpp  naive_subtraction.hpp  worker_path.hpp
scripts/: build.sh  run_tests.sh
shared_memory/: main.c  main_delta_matrix.c  sequential_solver.c
source/: CalculatorFactory.cpp  DistributedMultiplication.cpp  Matrix.cpp  NaiveAddition.cpp  NaiveMatrixMultiplication.cpp  NaiveMultiplication.cpp  NaiveSubtraction.cpp  linker_dummy.cpp
tests/: AdditionTest.cc  AdditionTest.cpp  CMakeLists.txt  DistributedMultiplicationTest.cc  Main.cc  MatrixMultiplication.cc  MatrixTest.cc  MultiplicationTest.cc  SubtractionTest.cc  addition_tests.cc  main.cc  matrix_multiplication_tests.cc  matrix_tests.cc  multiplication_tests.cc  subtraction_tests.cc
